fix: overlapping project imgs, minor styling fixes in trends page

--- a/src/Components/Global/HeaderUser/HeaderUser.scss
+++ b/src/Components/Global/HeaderUser/HeaderUser.scss
@@ -65,6 +65,10 @@
   &__market-tag-wrapper {
     width: 32px;
 
+    text {
+      font-weight: bold;
+    }
+
     @media (min-width: 1024px) {
       position: relative;
 
