--- a/src/Components/Global/TrendsElements/ProjectPicks/ProjectPicksTable.scss
+++ b/src/Components/Global/TrendsElements/ProjectPicks/ProjectPicksTable.scss
@@ -1,3 +1,5 @@
+@import '../../../../utils/breakpointsMixins.scss';
+
 .project-picks {
   overflow-x: scroll;
 
@@ -38,12 +40,32 @@
     }
 
     &__thin-text__positioned {
-      margin: 0 0 0 35px;
+      @include desktop {
+        margin: 0 0 0 16px;
+      }
     }
 
     &__project {
       display: flex;
       align-items: center;
+
+      @include desktop {
+        justify-self: flex-start;
+      }
+
+      &__overlapping-images {
+        display: flex;
+        justify-content: flex-end;
+        max-width: 90px;
+        width: 100%;
+
+        img {
+          width: 30px;
+          height: 30px;
+          margin-left: -20px;
+          margin-right: 8px;
+        }
+      }
     }
 
     .icon {
