--- a/src/Components/Global/TrendsElements/ProjectPicksList/ProjectPicksList.scss
+++ b/src/Components/Global/TrendsElements/ProjectPicksList/ProjectPicksList.scss
@@ -11,10 +11,12 @@
     align-content: center;
 
     margin: 20px 0 0;
+    width: calc(100px * 5);
     height: 100%;
 
     @include desktop {
       grid-gap: 0;
+      width: unset;
     }
 
     &__project {
